# Mineradio-rust

./: .gitattributes  .gitignore  AGENTS.md  README.md  package.json
public/: desktop-lyrics.html  index.html  wallpaper.html
public/css/: base.css  home-controls.css  panels-fx.css  splash-search.css  stage-lyrics.css
public/js/: api.js  app.js  audio-player.js  beat-analysis.js  beat-preview.js  cover-effects.js  fx-console.js  main.js  particles.js  playlist-3d.js  sidecar-client.js  stage-lyrics-3d.js  state.js  tauri-bridge.js  three-scene.js  ui.js  we-bg.js
sidecar/: index.js  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-lyrics.json  wallpaper.json  web-login.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  extractor.rs  hotkeys.rs  lib.rs  login.rs  lyrics.rs  main.rs  online_api.rs  scanner.rs  sidecar_manager.rs  state.rs  wallpaper.rs  wallpaper_pkg.rs  we_control.rs
