[package]
name = "mineradio-rust"
version = "1.1.0"
edition = "2021"

[lib]
name = "mineradio_rust_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lazy_static = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
