[package]
name = "mineradio-rust"
version = "1.1.0"
edition = "2021"

[lib]
name = "mineradio_rust_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lazy_static = "1"
tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.13", features = ["json", "cookies", "gzip"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
num-bigint = "0.4"
num-traits = "0.2"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
ecb = { version = "0.1", features = ["alloc"] }
md5 = "0.7"
qrcode = "0.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
